manifests/apps/openwebui/patches/add-sablier-labels.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: open-webui
  namespace: openwebui
  labels:
    sablier.enable: "true"
    sablier.group: openwebui
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: open-webui-redis
  namespace: openwebui
  labels:
    sablier.enable: "true"
    sablier.group: openwebui
