manifests/apps/openwebui/patches/remove-http-redirect-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: openwebui-open-webui-http-redirect
  namespace: openwebui
$patch: delete
